# PlantDoctor

./: .gitignore  CMakeLists.txt  CMakeLists_BACKUP_34452.txt  CMakeLists_REMOTE_34452.txt  Main.qml  Resources.qrc  main.cpp
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
android/src/com/plantdoctor/: AlarmHelper.java  AlarmReceiver.java  AlarmService.java  BatteryOptimizationHelper.java  GalleryHelper.java  NativeBridge.java  RequestReadExternalStorage.java  ScheduledWorker.java  WorkManagerHelper.java
qtjenny_output/jenny/proxy/: GenerateCppCodeProxy.h  android_app_ActivityProxy.h  android_app_BuilderProxy.h  android_app_NotificationChannelProxy.h  android_app_NotificationManagerProxy.h  android_app_NotificationProxy.h  android_content_IntentProxy.h  android_drawable_drawableProxy.h  android_media_AudioManagerProxy.h  android_os_BatteryManagerProxy.h  android_os_ContextProxy.h  android_os_PowerManagerProxy.h  android_os_VibrationEffectProxy.h  android_os_VibratorManagerProxy.h  android_os_VibratorProxy.h  android_os_WakeLockProxy.h  android_provider_GlobalProxy.h  android_provider_SettingsProxy.h  android_provider_SystemProxy.h  android_view_LayoutParamsProxy.h  android_view_WindowProxy.h  jenny_fusion_proxies.h
src/Libs/: toPt.py
src/core/mqtt/: mqttclient.cpp  mqttclient.h  pnddevice.cpp  pnddevice.h  pnddeviceconfigurator.cpp  pnddeviceconfigurator.h  pnddevicemodel.cpp  pnddevicemodel.h  pnddevicestate.h  pndtopics.cpp  pndtopics.h
src/core/utills/: helper.cpp  helper.h
ui/: UI_Structure
ui/app/: MainStackView.qml
ui/components/: AppBar.qml  AppBarItemes.qml
ui/features/auth/screens/: SignInScreen.qml  SignUpScreen.qml
ui/features/home/componetes/: SideBar.qml
ui/features/home/screens/: CameraScreen.qml  HomeScreen.qml
ui/features/inference/delegate/: HistoryDelegate.qml
ui/features/inference/model/: HistoryModel.qml
ui/features/sensors/screens/: Hotlines.qml  LiveMonitorScreen.qml  SensorDashboard.qml  SettingsScreen.qml
